[gd_scene load_steps=4 format=3 uid="uid://df6hx38kf4sos"]

[ext_resource type="Script" path="res://src/ui/node_graph_ui/nodes/automator_node/handle.gd" id="1_bjdhd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uh6a8"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fak3t"]

[node name="Handle" type="Control"]
z_index = 4096
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjdhd")

[node name="Panel" type="Panel" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uh6a8")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_fak3t")
flat = true

[connection signal="button_down" from="Panel/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Panel/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Panel/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Button" to="." method="_on_button_mouse_exited"]
